--- a/ipynb/nighttime_light_intensity_analysis.ipynb
+++ b/ipynb/nighttime_light_intensity_analysis.ipynb
@@ -48,6 +48,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " <img  src=\"https://www.nasa.gov/images/content/524257main_tokyo.jpg\" width=\"620\" height=\"410\"/>\n",
+    " <img  src=\"https://spaceflight.nasa.gov/gallery/images/station/crew-33/hires/iss033e021464.jpg\" width=\"620\" height=\"410\"/>\n",
+    " <img  src=\"https://spaceflight.nasa.gov/gallery/images/station/crew-26/hires/iss026e016517.jpg\" width=\"620\" height=\"410\"/>\n",
     " [1] Xintong Li, Xinran Wang, Jiang Zhang and Lingfei Wu, Allometric scaling, size distribution and pattern formation of natural cities. Palgrave Communications, August 2015.\n",
     "<img  src=\"http://www.palgrave-journals.com/article-assets/palgrave/palcomms/2015/palcomms201517/images_hires/w926/palcomms201517-f1.jpg\"/>\n",
     "<img  src=\"http://www.palgrave-journals.com/article-assets/palgrave/palcomms/2015/palcomms201517/images_hires/w926/palcomms201517-f2.jpg\"/>\n",
@@ -2135,7 +2138,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
